--- a/OCR-Benchmark/app/build.gradle
+++ b/OCR-Benchmark/app/build.gradle
@@ -53,4 +53,12 @@ dependencies {
     implementation "androidx.room:room-runtime:2.5.2"
     annotationProcessor "androidx.room:room-compiler:2.5.2"
     implementation "androidx.room:room-rxjava3:2.5.2"
+
+    implementation "androidx.camera:camera-camera2:1.2.3"
+    implementation "androidx.camera:camera-lifecycle:1.2.3"
+    implementation 'androidx.camera:camera-view:1.2.3'
+
+    implementation 'androidx.navigation:navigation-fragment:2.5.3'
+    implementation 'androidx.navigation:navigation-ui:2.5.3'
+    implementation "androidx.navigation:navigation-compose:2.5.3"
 }
