--- a/OCR-Benchmark/app/src/main/AndroidManifest.xml
+++ b/OCR-Benchmark/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE>" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -20,6 +21,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OCRBenchmark"
+        android:requestLegacyExternalStorage="true"
         tools:targetApi="31" >
 
         <activity
