--- a/OCR-Benchmark/app/build.gradle
+++ b/OCR-Benchmark/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation "androidx.navigation:navigation-compose:2.5.3"
+
+    implementation "com.google.code.gson:gson:2.9.0"
 }
